samples/_failures_safe/1761426125_fd3116_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_367e1265.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_367e1265.c:186:20: error: missing terminating " character
  186 |             printf("Vertex %d
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_367e1265.c:186:13: error: expected expression at end of input
  186 |             printf("Vertex %d
      |             ^~~~~~
./samples/SAFE/__tmp_367e1265.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_367e1265.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_367e1265.c:186:13: error: expected declaration or statement at end of input
